[admin-page] finish all feature upload avatar

--- a/admin-page/views/customer/customer.ejs
+++ b/admin-page/views/customer/customer.ejs
@@ -29,12 +29,12 @@
                       <tr>
                         <th>Email</th>
                         <th style="width:15%;">Họ Và Tên</th>
-                        <th>Ảnh Đại Diện</th>
+                        <th style="width:7%;">Ảnh Đại Diện</th>
                         <th>Địa Chỉ</th>
                         <th>Số Điện Thoại</th>
-                        <th>Tổng Số Tiền Mua Hàng</th>
-                        <th>Trạng Thái Xác Thực</th>
-                        <th>Lần Đăng Nhập Cuối</th>
+                        <th style="width:8%;">Tổng Số Tiền Mua Hàng</th>
+                        <th style="width:8%;">Trạng Thái Xác Thực</th>
+                        <th style="width:8%;">Lần Đăng Nhập Cuối</th>
                         <th>Cập Nhật</th>
                         <th>Xóa</th>     
                         <th style="display: none;"></th>           
