--- a/admin-page/views/user/user.ejs
+++ b/admin-page/views/user/user.ejs
@@ -29,10 +29,11 @@
                     <thead>
                       <tr>
                         <th>Tên Đăng Nhập</th>
-                        <th>Họ Và Tên</th>
+                        <th style="width: 10%">Họ Và Tên</th>
                         <th>Cấp Độ</th>
+                        <th>Ảnh Đại Diện</th>
                         <th>Email</th>
-                        <th>Ngày Sinh</th>
+                        <th style="width: 7%">Ngày Sinh</th>
                         <th>Địa Chỉ</th>
                         <th>Số Điện Thoại</th>
                         <th>Lần Đăng Nhập Cuối</th>
