--- a/admin-page/views/customer/customerDialogs.ejs
+++ b/admin-page/views/customer/customerDialogs.ejs
@@ -43,6 +43,8 @@
             </div>
 
             <div class="modal-body">
+                <form id="formupdatecustomeravatar" action="/upload" method="POST" enctype="multipart/form-data">
+                </form>
                 <form action="#" method="POST" id="formupdatecustomer">
                     <div class="form-group">
                         <label for="email" class="control-label">Email:</label>
@@ -51,11 +53,17 @@
                     <div class="form-group">
                         <label for="fullname" class="control-label">Họ Và Tên:</label>
                         <input type="text" class="form-control" id="fullName" name="fullName">
-                    </div>    
+                    </div>
                     <div class="form-group">
                         <label for="avatar" class="control-label">URL Ảnh Đại Diện:</label>
-                        <input type="text" class="form-control" id="avatar" name="avatar">
-                    </div>                  
+                        <div style="display: flex;flex-direction: row;">
+                            <input type="text" class="form-control" id="avatar" name="avatar">
+                            <input style="width:50%; margin-left:10px; align-self: center;" type="file"
+                                name="userAvatar" accept="image/png, image/jpeg"
+                                onchange="uploadImage('#formupdatecustomeravatar','#dlgupdatecustomer input[name=\'avatar\']');return false;"
+                                form="formupdatecustomeravatar">
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label for="phoneNumber" class="control-label">Số Điện Thoại:</label>
                         <input type="text" class="form-control" id="phoneNumber" name="phoneNumber">
@@ -64,7 +72,7 @@
                         <label for="address" class="control-label">Địa Chỉ:</label>
                         <input type="text" class="form-control" id="address" name="address">
                     </div>
-                
+
                     <button type="submit" onclick="handleUpdateCustomer(); return false;" class="btn btn-info"
                         data-dismiss="modal">Cập Nhật</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
