--- a/main-page/views/user/account_detail.ejs
+++ b/main-page/views/user/account_detail.ejs
@@ -2,9 +2,6 @@
 <html lang="en">
 
   <body>
-    <%
-      if(user!=null) console.log(user.uid)
-    %>
     <!-- catg header banner section -->
     <section id="aa-catg-head-banner">
       <img src="../img/fashion/fashion-header-bg-8.jpg" alt="fashion img" />
@@ -35,6 +32,7 @@
                         <h4 class="col-sm-6 col-md-6">Thông tin cá nhân</h4>
                         <div class="aa-register-now  col-sm-6 col-md-6" >
                             <a href="/user/update">Thay đổi thông tin cá nhân ?</a>
+                            <a href="/user/updatePassword">Thay đổi mật khẩu ?</a>
                         </div>
                     </div>
                     
@@ -83,7 +81,6 @@
       </div>
     </section>
     <script>
-      alert(user.uid);
       
     </script>
     <!-- / Cart view section -->
